# capy-discord

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-deploy.yml  lint-test.yml  main.yml
bot/: __init__.py  main.py
capy_discord/: __init__.py  __main__.py  bot.py  config.py  logging.py
capy_discord/exts/tools/: ping.py  sync.py
tests/bot/: test_main.py
